# friends-bot-service

./: .cursorignore  .dockerignore  .env.example  .env.k6.example  .env.load.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  compose.load.yml  compose.monitoring.yml  docker-compose.monitoring.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2bb4438ada27_initial.py  8c4e1a9b2d10_add_chat_draw_claims.py  a7f3c2d91e04_rename_legacy_draw_tables.py
docker/: Dockerfile.vps-sim
docker/vps-sim/: entrypoint.sh  nginx.conf
docs/: load-results.md  load-runbook.md
docs/adr/: 0001-legacy-database-table-names.md  0002-multi-process-webhook-scaling.md  0003-load-testing-multi-worker-webhook.md  0004-production-observability.md  0005-unified-metrics-http-export.md
friends_bot_service/: asgi.py  config.py  database.py  enums.py  handlers.py  main.py  main_api.py
friends_bot_service/api/: webhook_handler.py
friends_bot_service/bootstrap/: db.py  dependencies.py  dispatchers.py  runtime.py
friends_bot_service/bot_manager/: base.py  factory.py  polling.py  webhook.py
friends_bot_service/core/: config.py  database.py  lock.py  security.py
friends_bot_service/domain/: __init__.py  bot.py  keys.py  player.py
friends_bot_service/enums/: enums.py
friends_bot_service/handlers/: error.py  game.py  stats.py  user.py
friends_bot_service/infrastructure/: __init__.py  token_cipher.py
friends_bot_service/middlewares/: db_session.py  inbound_command_log.py  logging.py  update_id.py
friends_bot_service/models/: bot_models.py  game_models.py
friends_bot_service/repositories/: __init__.py  bot_repo.py  game_repo.py  mappers.py  stats_repo.py  unit_of_work.py  user_repo.py
friends_bot_service/scripts/: deactivate_inactive_bots.py
load/: __init__.py  seed_bots.py
tests/: conftest.py  test_database.py  test_handlers.py
uml/: friends-bot.drawio
(+204 files in other folders)
